chore(config): initial next.js project setup installation

--- a/better-auth-tasks/tsconfig.json
+++ b/better-auth-tasks/tsconfig.json
@@ -20,7 +20,8 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "baseUrl": "src/"     // allows to alias project directories ('../../components') to absolute paths ('@/components').
   },
   "include": [
     "next-env.d.ts",
