chore(config): initial next.js project setup architecture

--- a/better-auth-tasks/tsconfig.json
+++ b/better-auth-tasks/tsconfig.json
@@ -21,7 +21,7 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "baseUrl": "src/"     // allows to alias project directories ('../../components') to absolute paths ('@/components').
+    //"baseUrl": "src/"     // allows to alias project directories ('../../components') to absolute paths ('@/components').
   },
   "include": [
     "next-env.d.ts",
