--- a/better-auth-tasks/tsconfig.json
+++ b/better-auth-tasks/tsconfig.json
@@ -19,7 +19,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     },
     //"baseUrl": "src/"     // allows to alias project directories ('../../components') to absolute paths ('@/components').
   },
