fix(postgresql): remove /data from volume because v18 of postgres doen't like it

--- a/better-auth-tasks/docker-compose.yml
+++ b/better-auth-tasks/docker-compose.yml
@@ -9,6 +9,6 @@ services:
             - POSTGRES_USER=${DB_USER}
             - POSTGRES_DB=${DB_NAME}
         volumes:
-            - pgdata:/var/lib/postgresql/data
+            - pgdata:/var/lib/postgresql
 volumes:
     pgdata:
