--- a/better-auth-tasks/package.json
+++ b/better-auth-tasks/package.json
@@ -13,6 +13,9 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.15",
+    "@arcjet/ip": "^1.0.0-beta.15",
+    "@arcjet/next": "^1.0.0-beta.15",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
