chore(config): oauth signup / signin implementation

--- a/better-auth-tasks/.env.example
+++ b/better-auth-tasks/.env.example
@@ -12,3 +12,10 @@ BETTER_AUTH_URL=http://localhost:3000
 
 # Arcjet
 ARCJET_KEY=
+
+# Social Providers
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
